ENH: 댓글/대댓글 목록 조회 시 has_parent_comment 옵션 추가 및 삭제된 댓글이 있어도 has_child_comment는 true로 유지되도록 수정
